--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Create.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Create.cshtml
@@ -1,32 +1,41 @@
-﻿@model MVC_ECommerceTrgovina.Areas.Admin.Models.Users
-
+﻿@model MVC_ECommerceTrgovina.Data.ApplicationUser
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Novi korisnik</h1>
+@if(ViewBag.msg != null)
+{
+   <div class="alert alert-info" role="alert">
+        @ViewBag.msg
+    </div> 
+}
 
-<h4>Users</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        
+          <div class="form-group">
+                <label asp-for="FirstName" class="control-label"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastName" class="control-label"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" required />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-          
             <div class="form-group">
                 <label asp-for="PasswordHash" class="control-label"></label>
-                <input asp-for="PasswordHash" class="form-control" />
+                <input asp-for="PasswordHash" class="form-control" required />
                 <span asp-validation-for="PasswordHash" class="text-danger"></span>
             </div>
-           
-           
-            
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
                 <input asp-for="Address" class="form-control" required />
@@ -56,24 +65,12 @@
                     </select>
                     <span asp-validation-for="Country" class="text-danger"></span>
                  </div>
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-           
-            
-         
+          
               <div class="form-group mt-2 mb-2">
                 <label>Učitaj sliku</label>
                 <input type="file" name="ImageName" class="form-control" />
             </div>
-            @if(ViewBag.Role.Count > 0)
+           @* @if(ViewBag.Role.Count > 0)
             {
                  <div class="form-group">
                     <label asp-for="RoleId" class="control-label"></label>
@@ -86,7 +83,7 @@
                         }
                     </select>
                  </div>
-            }
+            }*@
              <div class="form-group">
                 <label asp-for="PhoneNumber" class="control-label"></label>
                 <input asp-for="PhoneNumber" class="form-control" />
