--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Index.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<MVC_ECommerceTrgovina.Areas.Admin.Models.Users>
+﻿@model IEnumerable<MVC_ECommerceTrgovina.Models.Users>
+ 
 <h1>Korisnici</h1>
 <hr />
 
