--- a/MVC_ECommerceTrgovina/Views/Shared/_AdminMenuPartial.cshtml
+++ b/MVC_ECommerceTrgovina/Views/Shared/_AdminMenuPartial.cshtml
@@ -21,7 +21,7 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
 
             <li>
-                <a class="nav-link text-dark" asp-area="admin" asp-controller="Products" asp-action="Index">Pregled proizvoda</a>
+                <a class="nav-link text-dark" asp-area="admin" asp-controller="Items" asp-action="Index">Pregled proizvoda</a>
                 <a class="nav-link text-dark" asp-area="admin" asp-controller="users" asp-action="Index">Pregled korisnika</a>
                 
             </li>
