--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Delete.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Delete.cshtml
@@ -4,26 +4,78 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Brisanje</h1>
+@if(ViewBag.KorisnikErrorMessage != null)
+{
+    <div class="alert alert-danger">@ViewBag.KorisnikErrorMessage</div>
+}
 
-@ViewBag.KorisnikErrorMessage
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jeste li sigurni da želite obrisati ovog korisnika?</h3>
 <div>
-    <h4>Korisnik</h4>
+    <h4> @Html.DisplayFor(model => model.Name)</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-       
-    </dl>
+    <div class="row">
+        <div class="col-8">
+              <dl class="row">
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Rola)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Rola)
+                </dd>
+                
+        
+                  <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Email)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Email)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Address)
+                </dt>
+                 <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Address)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.City)
+                </dt>
+                 <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.City)
+                </dd>
+            </dl>
+        </div>
+        <div class="col-4">
+             <dl class="row">
+
+                 <dd class = "col-sm-10">
+           
+                    @if (Model.ImageName == null || Model.ImageName == "")
+                    {
+                       <p>
+                            <img src="~/images/no-user.jpg" height=250 >
+                        </p>
+                    }
+                    else
+                    {
+                         <p>
+                            <img src="~/images/@Model.ImageName" height=250>
+                        </p>
+                
+                    }
+
+                 </dd>
+             </dl>
+        </div>
+    </div>
+  
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
