--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Create.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Create.cshtml
@@ -9,9 +9,10 @@
 
 <h4>Items</h4>
 <hr />
+ <form asp-action="Create" enctype="multipart/form-data">
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
+       
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -38,18 +39,21 @@
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
             </div>
-           
-              <div class="form-group mt-2 mb-2">
+    </div>
+
+     <div class="col-md-4">
+            <div class="form-group mt-2 mb-2">
                 <label>Učitaj sliku</label>
                 <input type="file" name="Image" class="form-control" />
           
             </div>
-            <div class="form-group">
+
+     </div>
+</div>
+<div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-        </form>
-    </div>
-</div>
+   </form>
 
 <div>
     <a asp-action="Index">Back to List</a>
