--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Index.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Index.cshtml
@@ -39,7 +39,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
+            <th style="width:30%">
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
@@ -62,7 +62,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-            <td>
+            <td style="width:30%">
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
