dodavanje dokumenta za opis aplikacije

--- a/MVC_ECommerceTrgovina/Views/Home/Index.cshtml
+++ b/MVC_ECommerceTrgovina/Views/Home/Index.cshtml
@@ -2,6 +2,32 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+<div class="row">
+    @*Filter s kategorijama*@
+    <div class="col-6">
+
+        <form method="GET" asp-area="" asp-controller="Home" asp-action="Index">
+
+            <div class="input-group mb-3">
+                    
+                <select class="form-select" id="floatingSelect" name="categoryId">
+                    <option selected value="">All</option>
+                    @foreach(var category in ViewBag.Categories)
+                    {
+                    <option value="@category.Id">@category.Title</option>
+                    }
+                </select>
+                   
+                <div class="input-group-append">
+                    <button type="submit" class="btn btn-primary">Filter</button>
+                </div>
+            </div>
+           
+        </form>
+        
+    </div>
+</div>
+
 @foreach (var item in Model)
 {
    <div class="card float-md-start m-2" style="width: 25rem;">
