--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Create.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Create.cshtml
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="PasswordHash" class="control-label"></label>
-                <input asp-for="PasswordHash" class="form-control" required />
+                <input asp-for="PasswordHash" class="form-control" type="password" required />
                 <span asp-validation-for="PasswordHash" class="text-danger"></span>
             </div>
             <div class="form-group">
