--- a/MVC_ECommerceTrgovina/Views/Home/Details.cshtml
+++ b/MVC_ECommerceTrgovina/Views/Home/Details.cshtml
@@ -5,13 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Detalji proizvoda: @Html.DisplayFor(model => model.Title)</h1>
 
 <div>
-    <h4>Items</h4>
+   
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <div class=col-md-6>
+             <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd class = "col-sm-10">
@@ -35,27 +36,36 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageName)
-        </dd>
+       
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Category.Title)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
-        </dd>
+        </div>
+       
+       <div class="col-md-6"> 
+                @if (Model.ImageName == null || Model.ImageName == "")
+        {
+            <p>
+                <img src="~/images/image-not-found.jpg" height=250; width=250 >
+            </p>
+        }
+        else
+        {
+                <p>
+                <img src="~/images/@Model.ImageName" height=250; width=250>
+            </p>
+                
+        }
+       
+    </div>
     </dl>
+
+     
 </div>
+
 <div>
-|
-    <a asp-action="Index">Homet</a>
+    <a asp-action="Index">Početna</a>
 </div>
