--- a/MVC_ECommerceTrgovina/Views/Home/Details.cshtml
+++ b/MVC_ECommerceTrgovina/Views/Home/Details.cshtml
@@ -41,7 +41,7 @@
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.Title)
+            @Html.DisplayFor(model => model.CategoryName)
         </dd>
         </div>
        
