--- a/MVC_ECommerceTrgovina/Views/Shared/_Layout.cshtml
+++ b/MVC_ECommerceTrgovina/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                           <li class="nav-item">
                             <partial name="_AdminMenuPartial" />
                         </li>
+                        <li class="nav-item">
+                            <partial name="_KategorijeMenuPartial" />
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
