--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Delete.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVC_ECommerceTrgovina.Models.Users
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Brisanje";
 }
 
 <h1>Brisanje</h1>
@@ -79,7 +79,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Brisanje" class="btn btn-danger" /> |
+        <a asp-action="Index">Povratak</a>
     </form>
 </div>
