--- a/MVC_ECommerceTrgovina/Views/Shared/_AdminMenuPartial.cshtml
+++ b/MVC_ECommerceTrgovina/Views/Shared/_AdminMenuPartial.cshtml
@@ -6,11 +6,12 @@
 
 @*
     1. uvjet: korisnik mora biti prijavljen
-    2. uvjet: prijavljeni korisnik mora imati ulogu admina
+    2. uvjet: prijavljeni korisnik mora imati ulogu admina ili urednika
 *@
+
 @if(
     SignInManager.IsSignedIn(User) &&
-    await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result,"admin")
+    await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result,"admin") 
 ) 
 {
     
@@ -23,6 +24,22 @@
             <li>
                 <a class="nav-link text-dark" asp-area="admin" asp-controller="Items" asp-action="Index">Pregled proizvoda</a>
                 <a class="nav-link text-dark" asp-area="admin" asp-controller="users" asp-action="Index">Pregled korisnika</a>
+                
+            </li>
+           
+        </ul>
+    </div>
+}
+else if( SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result,"Urednik")){
+     <div class="dropdown">
+            <a class="btn nav-link text-dark dropdown-toggle" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+            Admin
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+
+            <li>
+                <a class="nav-link text-dark" asp-area="admin" asp-controller="Items" asp-action="Index">Pregled proizvoda</a>
+              
                 
             </li>
            
