--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Create.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Create.cshtml
@@ -5,10 +5,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Kreiraj</h1>
 
-<h4>Items</h4>
+<h4>Proizvodi</h4>
 <hr />
+
+@if(ViewBag.message != null)
+{
+    <div class="alert alert-danger">@ViewBag.message</div>
+}
+
  <form asp-action="Create" enctype="multipart/form-data">
 <div class="row">
     <div class="col-md-4">
@@ -51,11 +57,11 @@
      </div>
 </div>
 <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Dodaj" class="btn btn-primary" />
             </div>
    </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Povratak</a>
 </div>
 
