--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -20,11 +20,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Početna</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        
                           <li class="nav-item">
                             <partial name="_AdminMenuPartial" />
                         </li>
@@ -42,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - WebShop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - WebShop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privatnost</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
