--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Create.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MVC_ECommerceTrgovina.Models.Users
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Novi korisnik";
 }
 
 <h1>Novi korisnik</h1>
@@ -92,14 +92,14 @@
             </div>
           
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Dodaj" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Povratak</a>
 </div>
 
 @section Scripts {
