--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Details.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Details.cshtml
@@ -70,6 +70,6 @@
 
 
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Izmjena</a> |
+    <a asp-action="Index">Povratak</a>
 </div>
