--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Edit.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model MVC_ECommerceTrgovina.Models.Users
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Izmjena";
     
 }
-<h1>Edit</h1>
+<h1>Izmjena</h1>
 
 
 <hr />
@@ -66,6 +66,7 @@
                     {
                          <p>
                             <img src="~/images/@Model.ImageName" height=250; width=250>
+                            <input asp-for="ImageName" type="hidden" />
                         </p>
                 
                     }
@@ -77,13 +78,13 @@
             </div>
         </div>
          <div class="form-group">
-            <input type="submit" value="Save" class="btn btn-primary" />
+            <input type="submit" value="Spremi" class="btn btn-primary" />
         </div>
      </form>
 
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Povratak</a>
 </div>
 
 @section Scripts {
