--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Index.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Users/Index.cshtml
@@ -31,11 +31,11 @@
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id" >Details</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id">Izmjena</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id" >Detalji</a> |
                     @if (item.Rola!="Admin")
                     {
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Brisanje</a>
                     }
                     
                 </td>
