Izmjena nekih engleskih naziva

--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Create.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVC_ECommerceTrgovina.Models.Items
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Dodavanje stavaka";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
