--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Edit.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVC_ECommerceTrgovina.Models.Items
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Izmjena stavke";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
