--- a/MVC_ECommerceTrgovina/Views/Home/Index.cshtml
+++ b/MVC_ECommerceTrgovina/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<MVC_ECommerceTrgovina.Models.Items>
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Početna";
 }
 @if(ViewBag.filter){
 <div class="row">
