--- a/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Delete.cshtml
+++ b/MVC_ECommerceTrgovina/Areas/Admin/Views/Items/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVC_ECommerceTrgovina.Models.Items
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Brisanje stavke";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
