--- a/MVC_ECommerceTrgovina/Views/Home/Details.cshtml
+++ b/MVC_ECommerceTrgovina/Views/Home/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVC_ECommerceTrgovina.Models.Items
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalji";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
